--- a/resources/img.qrc
+++ b/resources/img.qrc
@@ -1,7 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>images/log.png</file>
-        <file>images/help_browser.png</file>
-        <file>images/about.png</file>
+        <file>images/new.png</file>
     </qresource>
 </RCC>
