Moved docu to a single page layout

--- a/doc/doc.qrc
+++ b/doc/doc.qrc
@@ -1,33 +1,22 @@
 <RCC>
     <qresource prefix="/">
-        <file>dialog.html</file>
-        <file>index.html</file>
-        <file>logfile.html</file>
-        <file>main.html</file>
-        <file>wizard.html</file>
-        <file>help.html</file>
-        <file>privileges.html</file>
-        <file>main_window.html</file>
-        <file>dialog_window.html</file>
-        <file>wizard_window.html</file>
-        <file>settings.html</file>
-        <file>answer.html</file>
-        <file>about.html</file>
-        <file>history.html</file>
-        <file>logfile_format.html</file>
-        <file>logfile_handling.html</file>
         <file>images/dialog_main.png</file>
         <file>images/help.png</file>
         <file>images/main_statusbar.png</file>
         <file>images/append.png</file>
         <file>images/conf.png</file>
         <file>images/main.png</file>
-        <file>license.html</file>
-        <file>development.html</file>
         <file>images/new_pw.png</file>
         <file>images/pw.png</file>
         <file>images/new_pro.png</file>
         <file>images/ms.png</file>
-        <file>log_viewer.html</file>
+        <file>about.md</file>
+        <file>doc.html</file>
+        <file>doc.qrc</file>
+        <file>help.md</file>
+        <file>logfile.md</file>
+        <file>main.md</file>
+        <file>questionnaire.md</file>
+        <file>wizard.md</file>
     </qresource>
 </RCC>
